# autd-emulator

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  setting.json
.github/workflows/: build.yml  release.yml
acoustic-field-viewer/: Cargo.toml
acoustic-field-viewer/examples/: main.rs
acoustic-field-viewer/src/: camera_helper.rs  dir_viewer.rs  field_compute_pipeline.rs  lib.rs  renderer.rs  slice_viewer.rs  sound_sources.rs  trans_viewer.rs  update_flag.rs  viewer_settings.rs
acoustic-field-viewer/src/common/: color.rs  coloring_method.rs  mod.rs
acoustic_field_viewer/: Cargo.toml  readme.md
acoustic_field_viewer/assets/shaders/: slice.frag  slice.vert
acoustic_field_viewer/examples/: main.rs
acoustic_field_viewer/src/: axis_3d.rs  camera_helper.rs  lib.rs  sound_source.rs
acoustic_field_viewer/src/common/: color.rs  coloring_method.rs  mod.rs  texture.rs
acoustic_field_viewer/src/view/: acoustic_field_slice_viewer.rs  device_direction_viewer.rs  event.rs  mod.rs  render_system.rs  setting.rs  sound_source_viewer.rs  system.rs  update_flag.rs  window.rs
assets/shaders/: circle.frag  circle.vert  cpressure_base.comp  cube.frag  cube.vert  pressure.comp  slice.frag  slice.vert
autd3-emulator/: Cargo.toml  README.md
autd3-emulator-server/: Cargo.toml
autd3-emulator-server/src/: autd_data.rs  interface.rs  lib.rs  parser.rs  server.rs
autd3-emulator/src/: autd_event_handler.rs  camera_helper.rs  consts.rs  interface.rs  main.rs  offscreen_render_sys.rs  parser.rs  server.rs  settings.rs  viewer_controller.rs
autd3-emulator/src/ui/: camera_control_tab.rs  control_tab.rs  mod.rs  ui_command.rs  ui_view.rs
firmware-emulator/: Cargo.toml
firmware-emulator/examples/: device.rs  trans.rs
firmware-emulator/src/: consts.rs  delayed_fifo.rs  device.rs  lib.rs  modulator.rs  pwm.rs  silent_lpf.rs  transducer.rs
offscreen_renderer/: Cargo.toml
offscreen_renderer/examples/: debug.rs
offscreen_renderer/src/: lib.rs  renderer.rs
src/: autd_event_handler.rs  camera_helper.rs  color.rs  custom.rs  interface.rs  main.rs  parser.rs  ui_command.rs  ui_view.rs  viewer_controller.rs
src/ui/: camera_control_tab.rs  mod.rs  slice_control_tab.rs  ui_command.rs  ui_view.rs
vecmath-util/: Cargo.toml
vecmath_util/: Cargo.toml
vecmath_util/src/: lib.rs
