[package]
name = "autd-emulator"
version = "0.1.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acoustic_field_viewer = {git = "https://github.com/sssssssuzuki/acoustic_field_viewer.git", version="0.0.3"}
scarlet = "1.1.0"
vecmath = "1.0.0"
