[package]
name = "acoustic-field-viewer"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autd3-core = "1.9.3"
camera_controllers = "0.32.0"
image = "0.23.14"
imgui = "0.8.0"
imgui-vulkano-renderer = {git = "https://github.com/sssssssuzuki/imgui-vulkano-renderer.git"}
imgui-winit-support = "0.8.0"
quaternion = "0.4.1"
serde = { version = "1.0.130", features = ["derive"] }
vulkano = "0.26.0"
vulkano-shaders = "0.26.0"
vulkano-win = "0.26.0"
winit = "0.25.0"
vecmath = "1.0.0"
vecmath-util = {path="../vecmath-util"}
bitflags = "1.3.2"
scarlet = "1.1.0"
png = "0.17.2"
