[package]
name = "acoustic_field_viewer"
version = "0.2.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
camera_controllers = "0.32.0"
conrod = "0.62.1"
conrod_core = "0.74.0"
conrod_piston = "0.74.0"
find_folder = "0.3.0"
gfx = "0.18.2"
gfx_device_gl = "0.16.2"
piston_window = "0.120.0"
quaternion = "0.4.1"
rand = "0.8.4"
scarlet = "1.1.0"
shader_version = "0.7.0"
vecmath = "1.0.0"
vecmath_util = {path="../vecmath_util"}
