[package]
name = "acoustic_field_viewer"
version = "0.3.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
autd3-core = "1.5.0"
bitflags = "1.3.2"
camera_controllers = "0.32.0"
find_folder = "0.3.0"
gfx = "0.18.2"
gfx_core = "0.9.2"
gfx_device_gl = "0.16.2"
glutin = "0.26.0"
image = "0.23.14"
imgui = "0.7.0"
imgui-gfx-renderer = "0.7.0"
imgui-winit-support = "0.7.1"
old_school_gfx_glutin_ext = "0.26.0"
quaternion = "0.4.1"
rand = "0.8.4"
scarlet = "1.1.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
shader_version = "0.7.0"
vecmath = "1.0.0"
vecmath_util = {path="../vecmath_util"}
