[package]
name = "autd-emulator"
version = "0.7.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acoustic-field-viewer = {path="../acoustic-field-viewer"}
autd3-core = "2.0.0"
camera_controllers = "0.32.0"
chrono = "0.4.19"
image = "0.24.2"
imgui = "0.8.2"
imgui-vulkano-renderer = {git = "https://github.com/sssssssuzuki/imgui-vulkano-renderer.git"}
imgui-winit-support = "0.8.2"
quaternion = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vecmath = "1.0.0"
vecmath-util = {path="../vecmath-util"}
vulkano = "0.29.0"
winit = "0.26.0"
