[package]
name = "offscreen-renderer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.25.0"
vulkano-shaders = "0.25.0"
acoustic_field_viewer = {path="../acoustic_field_viewer"}
vecmath = "1.0.0"
vecmath_util = {path="../vecmath_util"}
image = "0.23.14"
scarlet = "1.1.0"

[dev-dependencies]
shader_version = "0.7.0"
autd3-core = "1.5.0"
